--- a/app/src/main/res/layout/activity_tab_two.xml
+++ b/app/src/main/res/layout/activity_tab_two.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".tab_two.TabTwo">
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/frameLayoutReservasi"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottomMenuReservasi"
+        />
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottomMenuReservasi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/reservasi_menu"
+        app:itemTextColor="@android:color/white"
+        app:itemIconTint="@android:color/white"
+        />
+
+</RelativeLayout>
