--- a/app/src/main/res/layout/activity_tab_three.xml
+++ b/app/src/main/res/layout/activity_tab_three.xml
@@ -1,9 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".tab_three.TabThree">
+    tools:context=".tab_three.TabThree"
+    android:orientation="vertical"
+    >
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/edtNamaUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Nama"
+        />
+
+    <EditText
+        android:id="@+id/edtAlamatUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Alamat"
+        />
+
+    <EditText
+        android:id="@+id/edtTelpUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Telp"
+        />
+
+    <TextView
+        android:id="@+id/txtSaldo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Saldo"
+        />
+
+    <Button
+        android:id="@+id/btnUpdateDataUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update Data"
+        />
+
+
+</LinearLayout>
