--- a/app/src/main/res/layout/activity_pencarian_penerbangan.xml
+++ b/app/src/main/res/layout/activity_pencarian_penerbangan.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".activity.PencarianPenerbangan">
 
+    <ListView
+        android:id="@+id/listHasilFilter"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </android.support.constraint.ConstraintLayout>
