--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <include layout="@layout/toolbar_main"/>
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayoutMain"
         android:layout_width="match_parent"
