--- a/app/src/main/res/layout/activity_in_progress.xml
+++ b/app/src/main/res/layout/activity_in_progress.xml
@@ -5,9 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".reservasi.InProgress">
 
-    <ListView
-        android:id="@+id/listTransaksi"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshInProgress"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/listTransaksi"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 
 </RelativeLayout>
