--- a/app/src/main/res/layout/activity_pencarian_penerbangan.xml
+++ b/app/src/main/res/layout/activity_pencarian_penerbangan.xml
@@ -8,9 +8,18 @@
 
     <include layout="@layout/toolbar_main"/>
 
-    <ListView
-        android:id="@+id/listHasilFilter"
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshPeencarian"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/listHasilFilter"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </LinearLayout>
