--- a/app/src/main/res/layout/activity_tab_three.xml
+++ b/app/src/main/res/layout/activity_tab_three.xml
@@ -25,7 +25,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sisa Saldo"
+                android:text="Cuerrent Balance"
                 android:textSize="20sp"
                 android:gravity="center"
                 />
@@ -38,6 +38,7 @@
                 android:textSize="30sp"
                 android:gravity="center"
                 android:padding="10dp"
+                android:textStyle="bold"
                 />
 
         </LinearLayout>
@@ -49,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp"
+        android:padding="20dp"
         android:layout_below="@+id/cardViewSaldo"
         >
 
@@ -65,6 +66,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Alamat"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
             />
 
         <EditText
@@ -72,6 +75,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
             />
 
         <EditText
