--- a/app/src/main/res/layout/model_data_inprogress.xml
+++ b/app/src/main/res/layout/model_data_inprogress.xml
@@ -2,47 +2,41 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="140dp"
-    android:padding="10dp"
-    >
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/txtNamaPesawatInProgress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nama Pesawat"
-        android:textSize="25sp"
         android:layout_marginRight="10dp"
         android:gravity="center"
-        />
+        android:text="Nama Pesawat"
+        android:textSize="25sp" />
 
     <LinearLayout
         android:id="@+id/labeelKeteerangan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtNamaPesawatInProgress"
-        android:gravity="center"
-        >
+        android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Jam Keberangkatan"
-            android:textSize="10sp"
-            />
+            android:textSize="10sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="----"
             android:layout_margin="10dp"
-            />
+            android:text="----" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Jam Sampai Tujuan"
-            android:textSize="10sp"
-            />
+            android:textSize="10sp" />
 
     </LinearLayout>
 
@@ -50,31 +44,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/labeelKeteerangan"
-        android:gravity="center"
-        >
+        android:gravity="center">
 
         <TextView
             android:id="@+id/txtJamBerangkat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="00:00"
-            android:textSize="25sp"
-            />
+            android:textSize="25sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="----"
             android:layout_margin="10dp"
-            />
+            android:text="----" />
 
         <TextView
             android:id="@+id/txtJamTiba"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="00:00"
-            android:textSize="25sp"
-            />
+            android:textSize="25sp" />
 
     </LinearLayout>
 
