--- a/app/src/main/res/layout/popup_transaksi.xml
+++ b/app/src/main/res/layout/popup_transaksi.xml
@@ -1,44 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:padding="15dp"
-    >
+    android:padding="15dp">
 
     <TextView
         android:id="@+id/txtNamaUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Danang Priabada"
-        android:textSize="20sp"
-        />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/txtIdTransaksi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="672014113"
         android:layout_below="@+id/txtNamaUser"
-        />
+        android:text="672014113" />
 
     <TextView
         android:id="@+id/txtIdPenerbangan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="672014113"
         android:layout_alignParentBottom="true"
-        />
+        android:text="672014113" />
 
     <TextView
         android:id="@+id/txtJumlahTiket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10"
-        android:textSize="30sp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-
-        />
+        android:text="10"
+        android:textSize="30sp" />
 
 </RelativeLayout>
