--- a/app/src/main/res/layout/activity_tab_one.xml
+++ b/app/src/main/res/layout/activity_tab_one.xml
@@ -2,54 +2,47 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="15dp"
-        >
+        android:padding="15dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Dari"
             android:padding="5dp"
-            />
+            android:text="Dari" />
 
         <Spinner
             android:id="@+id/spinnerBandaraAsal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:layout_marginRight="5dp"
             android:layout_marginLeft="5dp"
-            />
+            android:layout_marginRight="5dp"
+            android:padding="5dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ke"
             android:padding="5dp"
-            />
+            android:text="Ke" />
 
         <Spinner
             android:id="@+id/spinnerBandaraTujuan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:layout_marginRight="5dp"
             android:layout_marginLeft="5dp"
-            />
+            android:layout_marginRight="5dp"
+            android:padding="5dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tanggal"
             android:padding="5dp"
-            />
+            android:text="Tanggal" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -59,33 +52,29 @@
                 android:id="@+id/edtTanggalBerangkat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
                 android:layout_toLeftOf="@+id/ibDatePicker"
-                />
+                android:padding="5dp" />
 
             <ImageButton
                 android:id="@+id/ibDatePicker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:background="@drawable/ic_date_range_black"
                 android:layout_centerVertical="true"
-                />
+                android:background="@drawable/ic_date_range_black" />
 
         </RelativeLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Passengger"
             android:padding="5dp"
-            />
+            android:text="Passengger" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            />
+            android:padding="5dp" />
 
     </LinearLayout>
 
@@ -93,8 +82,7 @@
         android:id="@+id/btnCariRutePenerbangan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cari"
         android:layout_alignParentBottom="true"
-        />
+        android:text="Cari" />
 
 </RelativeLayout>
