--- a/app/src/main/res/layout/activity_tab_three.xml
+++ b/app/src/main/res/layout/activity_tab_three.xml
@@ -1,45 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".tab_three.TabThree"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".tab_three.TabThree">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardViewSaldo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        app:cardCornerRadius="8dp"
-        >
+        app:cardCornerRadius="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="20dp"
-            >
+            android:padding="20dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Cuerrent Balance"
-                android:textSize="20sp"
                 android:gravity="center"
-                />
+                android:text="Cuerrent Balance"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/txtSaldo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Saldo"
-                android:textSize="30sp"
                 android:gravity="center"
                 android:padding="10dp"
-                android:textStyle="bold"
-                />
+                android:text="Saldo"
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -49,42 +45,37 @@
         android:id="@+id/dataDetailUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="20dp"
         android:layout_below="@+id/cardViewSaldo"
-        >
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <EditText
             android:id="@+id/edtNamaUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nama"
-            />
+            android:hint="Nama" />
 
         <EditText
             android:id="@+id/edtAlamatUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Alamat"
-            android:layout_marginRight="5dp"
             android:layout_marginLeft="5dp"
-            />
+            android:layout_marginRight="5dp"
+            android:hint="Alamat" />
 
         <EditText
             android:id="@+id/edtEmailUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"
-            android:layout_marginRight="5dp"
             android:layout_marginLeft="5dp"
-            />
+            android:layout_marginRight="5dp"
+            android:hint="Email" />
 
         <EditText
             android:id="@+id/edtTelpUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Telp"
-            />
+            android:hint="Telp" />
 
     </LinearLayout>
 
@@ -92,18 +83,15 @@
         android:id="@+id/txtIdUseer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="672014113"
         android:layout_below="@+id/dataDetailUser"
-        />
+        android:gravity="center"
+        android:text="672014113" />
 
     <Button
         android:id="@+id/btnUpdateDataUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Update Data"
         android:layout_alignParentBottom="true"
-        />
-
+        android:text="Update Data" />
 
 </RelativeLayout>
