--- a/app/src/main/res/menu/reservasi_menu.xml
+++ b/app/src/main/res/menu/reservasi_menu.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/inProgress"
-        android:title="In Progress"
+    <item
+        android:id="@+id/inProgress"
         android:icon="@mipmap/ic_launcher_round"
-        />
+        android:title="In Progress" />
 
-    <item android:id="@+id/history"
-        android:title="History"
+    <item
+        android:id="@+id/history"
         android:icon="@mipmap/ic_launcher_round"
-        />
+        android:title="History" />
 
 </menu>
