--- a/app/src/main/res/layout/activity_tab_one.xml
+++ b/app/src/main/res/layout/activity_tab_one.xml
@@ -72,6 +72,7 @@
             android:text="Passengger" />
 
         <EditText
+            android:id="@+id/edtPassengger"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp" />
